Update settings for visual studio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,17 @@
 
     "files.exclude": {
         "**/.git": true,
-        "out": true
+        "out": true,
+        "**/.vs/": true,
+        "**/obj/": true,
+        "**/bin/": true
     },
 
     "search.exclude": {
-        "out": true
+        "out": true,
+        "**/.vs/": true,
+        "**/obj/": true,
+        "**/bin/": true
     },
 
     "powershell.debugging.createTemporaryIntegratedConsole": true,
