--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-/out/
+# Module assemblies
+**/Assemblies/*.dll
+
+# Build output
+[Bb]in/
+[Oo]bj/
+[Oo]ut/
+
+# Visual Studio cache, packages
+.vs/
+**/packages/*
