--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,58 @@
 name: CI
 
-on: [push]
+on:
+  push:
 
 jobs:
-  build:
-
+  windows-powershell-legacy:
+    name: Windows PowerShell 5.1
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v1
-
-    - name: Install PowerShell Module posh-git
-      run: Install-Module -Name 'posh-git' -Repository 'PSGallery' -Force -SkipPublisherCheck -AllowClobber -ErrorAction Stop -Verbose
-      shell: powershell
-
-    - name: Install PowerShell Module Pester
-      run: Install-Module -Name 'Pester' -Repository 'PSGallery' -Force -SkipPublisherCheck -AllowClobber -ErrorAction Stop -Verbose
-      shell: powershell
-
-    - name: Install PowerShell Module PSScriptAnalyzer
-      run: Install-Module -Name 'PSScriptAnalyzer' -Repository 'PSGallery' -Force -SkipPublisherCheck -AllowClobber -ErrorAction Stop -Verbose
-      shell: powershell
-
-    - name: Install PowerShell Module SecurityFever
-      run: Install-Module -Name 'SecurityFever' -Repository 'PSGallery' -Force -SkipPublisherCheck -AllowClobber -ErrorAction Stop -Verbose
-      shell: powershell
-
-    - name: Install PowerShell Module InvokeBuild
-      run: Install-Module -Name 'InvokeBuild' -Repository 'PSGallery' -Force -SkipPublisherCheck -AllowClobber -ErrorAction Stop -Verbose
-      shell: powershell
-
-    - name: Install PowerShell Module InvokeBuildHelper
-      run: Install-Module -Name 'InvokeBuildHelper' -Repository 'PSGallery' -Force -SkipPublisherCheck -AllowClobber -ErrorAction Stop -Verbose
-      shell: powershell
-
-    - name: Build
-      run: Invoke-Build
-      shell: powershell
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Install and cache PowerShell modules
+        uses: potatoqualitee/psmodulecache@v5.2
+        with:
+          shell: powershell
+          modules-to-cache: InvokeBuild:5.10.1, InvokeBuildHelper:3.2.0
+      - name: Run PowerShell module Schema tests
+        shell: powershell
+        run: |
+          $Global:VerbosePreference = 'Continue'
+          Invoke-Build -Task 'SchemaTest'
+      - name: Run PowerShell module Unit tests
+        shell: powershell
+        run: |
+          $Global:VerbosePreference = 'Continue'
+          Invoke-Build -Task 'UnitTest'
+      - name: Run PowerShell module Analyzer tests
+        shell: powershell
+        run: |
+          $Global:VerbosePreference = 'Continue'
+          Invoke-Build -Task 'AnalyzerTest'
+  windows-powershell-core:
+    name: Windows PowerShell 7.x
+    runs-on: windows-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Install and cache PowerShell modules
+        uses: potatoqualitee/psmodulecache@v5.2
+        with:
+          shell: pwsh
+          modules-to-cache: InvokeBuild:5.10.1, InvokeBuildHelper:3.2.0
+      - name: Run PowerShell module Schema tests
+        shell: pwsh
+        run: |
+          $Global:VerbosePreference = 'Continue'
+          Invoke-Build -Task 'SchemaTest'
+      - name: Run PowerShell module Unit tests
+        shell: pwsh
+        run: |
+          $Global:VerbosePreference = 'Continue'
+          Invoke-Build -Task 'UnitTest'
+      - name: Run PowerShell module Analyzer tests
+        shell: pwsh
+        run: |
+          $Global:VerbosePreference = 'Continue'
+          Invoke-Build -Task 'AnalyzerTest'
