--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: CI
 
 on:
   push:
+    branches:
+      - main
 
 jobs:
   windows-powershell-legacy:
@@ -18,40 +20,35 @@ jobs:
       - name: Run PowerShell module Schema tests
         shell: powershell
         run: |
-          $Global:VerbosePreference = 'Continue'
-          Write-Host "`nGIT BRANCH"
-          git branch --list | out-string | write-host
           Invoke-Build -Task 'SchemaTest'
-      # - name: Run PowerShell module Unit tests
-      #   shell: powershell
-      #   run: |
-      #     $Global:VerbosePreference = 'Continue'
-      #     Invoke-Build -Task 'UnitTest'
-      # - name: Run PowerShell module Analyzer tests
-      #   shell: powershell
-      #   run: |
-      #     $Global:VerbosePreference = 'Continue'
-      #     Invoke-Build -Task 'AnalyzerTest'
-  # windows-powershell-core:
-  #   name: Windows PowerShell 7.x
-  #   runs-on: windows-latest
-  #   steps:
-  #     - name: Check out repository code
-  #       uses: actions/checkout@v3
-  #     - name: Install and cache PowerShell modules
-  #       uses: potatoqualitee/psmodulecache@v5.2
-  #       with:
-  #         shell: pwsh
-  #         modules-to-cache: InvokeBuild:5.10.1, InvokeBuildHelper:3.2.0
-  #     - name: Run PowerShell module Schema tests
-  #       shell: pwsh
-  #       run: |
-  #         Invoke-Build -Task 'SchemaTest'
-  #     - name: Run PowerShell module Unit tests
-  #       shell: pwsh
-  #       run: |
-  #         Invoke-Build -Task 'UnitTest'
-  #     - name: Run PowerShell module Analyzer tests
-  #       shell: pwsh
-  #       run: |
-  #         Invoke-Build -Task 'AnalyzerTest'
+      - name: Run PowerShell module Unit tests
+        shell: powershell
+        run: |
+          Invoke-Build -Task 'UnitTest'
+      - name: Run PowerShell module Analyzer tests
+        shell: powershell
+        run: |
+          Invoke-Build -Task 'AnalyzerTest'
+  windows-powershell-core:
+    name: Windows PowerShell 7.x
+    runs-on: windows-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Install and cache PowerShell modules
+        uses: potatoqualitee/psmodulecache@v5.2
+        with:
+          shell: pwsh
+          modules-to-cache: InvokeBuild:5.10.1, InvokeBuildHelper:3.2.0
+      - name: Run PowerShell module Schema tests
+        shell: pwsh
+        run: |
+          Invoke-Build -Task 'SchemaTest'
+      - name: Run PowerShell module Unit tests
+        shell: pwsh
+        run: |
+          Invoke-Build -Task 'UnitTest'
+      - name: Run PowerShell module Analyzer tests
+        shell: pwsh
+        run: |
+          Invoke-Build -Task 'AnalyzerTest'
