--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,9 @@
     "powershell.codeFormatting.whitespaceAfterSeparator": true,
     "powershell.codeFormatting.whitespaceAroundOperator": true,
     "powershell.codeFormatting.whitespaceBeforeOpenBrace": true,
-    "powershell.codeFormatting.whitespaceBeforeOpenParen": true
+    "powershell.codeFormatting.whitespaceBeforeOpenParen": true,
+
+    "cSpell.words": [
+        "Paren"
+    ]
 }
