--- a/.github/workflows/pwsh-ci.yml
+++ b/.github/workflows/pwsh-ci.yml
@@ -3,6 +3,7 @@ name: PowerShell - CI
 on:
   push:
     branches: [ 'main' ]
+    tags-ignore: [ '*' ]
     paths: [ '**.ps1', '**.psm1', '**.psd1', '**.ps1xml', '.github/workflows/pwsh-ci.yml' ]
 
 jobs:
