--- a/.github/workflows/pwsh-ci.yml
+++ b/.github/workflows/pwsh-ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install and cache PowerShell modules
         uses: potatoqualitee/psmodulecache@v6.2.1
         with:
-          modules-to-cache: InvokeBuild:5.14.18,InvokeBuildHelper:3.2.3,PSScriptAnalyzer:1.24.0,Pester:5.7.1
+          modules-to-cache: InvokeBuild:5.14.18,InvokeBuildHelper::,PSScriptAnalyzer:1.24.0,Pester:5.7.1
 
       - name: Build PowerShell module
         shell: pwsh
