--- a/.github/workflows/pwsh-ci.yml
+++ b/.github/workflows/pwsh-ci.yml
@@ -19,6 +19,7 @@ jobs:
         uses: potatoqualitee/psmodulecache@v6.2.1
         with:
           modules-to-cache: InvokeBuild:5.14.18,InvokeBuildHelper::,PSScriptAnalyzer:1.24.0,Pester:5.7.1
+          updatable: true
 
       - name: Build PowerShell module
         shell: pwsh
