--- a/.github/workflows/pwsh-release.yml
+++ b/.github/workflows/pwsh-release.yml
@@ -17,6 +17,7 @@ jobs:
         uses: potatoqualitee/psmodulecache@v6.2.1
         with:
           modules-to-cache: InvokeBuild:5.14.18,InvokeBuildHelper::,PSScriptAnalyzer:1.24.0,Pester:5.7.1
+          updatable: true
 
       - name: Publish to GitHub Repository
         shell: pwsh
@@ -37,6 +38,8 @@ jobs:
         uses: potatoqualitee/psmodulecache@v6.2.1
         with:
           modules-to-cache: InvokeBuild:5.14.18,InvokeBuildHelper::,PSScriptAnalyzer:1.24.0,Pester:5.7.1
+          updatable: true
+
       - name: Publish to PowerShell Gallery
         shell: pwsh
         run: |
